--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
         <h1>Days <span>I Code</span></h1>
         <div class="calendar"></div>
     </div>
+    <div class="github">
+        <h1>Github <span>Stat</span></h1>
+    <img src="https://github-readme-streak-stats.herokuapp.com/?user=Swapnil28Y&theme=dark" />
+            <img src="https://github-readme-stats.vercel.app/api?username=Swapnil28Y&show_icons=true&locale=en&theme=dark"/>
+            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Swapnil28Y&theme=radical&langs_count=8" alt="Swapnil28Y"  />
+        </div>
     <!-- <div class="statistic" id="statistic">
         <h1>Works<span> I have done</span></h1>
         <div id="datawork">
@@ -254,7 +260,7 @@
                             <img src="./Resource/link.png" alt="">
                             <h1>Live</h1>
                         </a>
-                        <a href="https://github.com/Sakil9051/WEB-101-Project" target="_blank">
+                        <a href="https://github.com/Swapnil28Y/DeccanHerald-Clone" target="_blank">
                             <img src="./Resource/github1.png" alt="">
                             <h1>View Code</h1>
                         </a>
@@ -306,7 +312,7 @@
                              <img src="./Resource/link.png" alt="">
                              <h1>Live</h1>
                          </a>
-                         <a href="https://github.com/Ajay470/Team-squalid-wire" target="_blank">
+                         <a href="https://github.com/Swapnil28Y/Kimaye-Clone" target="_blank">
                              <img src="./Resource/github1.png" alt="">
                              <h1>View Code</h1>
                          </a>
