--- a/index.html
+++ b/index.html
@@ -322,6 +322,112 @@
             </div>
  
          </div>
+         <div id="projects-3">
+            <div class="project-s">
+                 <div class="image">
+                     <img src="./Resource/TripAdviser.png" alt="">
+                     <h3>Tech Stack</h3>
+                     <div>
+                         <div class="tools-s">
+                             <div>
+                                 <img src="./Resource/javascript.png" alt="">
+                                 <p>JavaScript</p>
+                             </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/html.png" alt="">
+                             <p>HTML</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/css.png" alt="">
+                             <p>CSS</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/github.png" alt="">
+                             <p>GitHub</p>
+                         </div>
+                     </div>
+                 </div>
+                 </div>
+                 <div class="paragraph">
+                     <h1>Tripadviser Clone</h1>
+                     <p>Tripadviser is a travel guidance platform.</p>
+                     <p >A user can book trip with the help of tripadvider.</p> 
+                     <p>User can book hotel, flights remotely no need of guide during travelling.</p>
+                     <div>
+                         <a href="https://sage-mandazi-657e15.netlify.app/" target="_blank">
+                             <img src="./Resource/link.png" alt="">
+                             <h1>Live</h1>
+                         </a>
+                         <a href="https://github.com/Swapnil28Y/TripAdviser-Clone" target="_blank">
+                             <img src="./Resource/github1.png" alt="">
+                             <h1>View Code</h1>
+                         </a>
+                     </div>
+                     
+                 </div>
+            </div>
+ 
+         </div>  
+
+         <div id="projects-4">
+            <div class="project-s">
+                 <div class="image">
+                     <img src="./Resource/starwars.png" alt="">
+                     <h3>Tech Stack</h3>
+                     <div>
+                         <div class="tools-s">
+                             <div>
+                                 <img src="./Resource/javascript.png" alt="">
+                                 <p>JavaScript</p>
+                             </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/html.png" alt="">
+                             <p>HTML</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/css.png" alt="">
+                             <p>CSS</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/github.png" alt="">
+                             <p>GitHub</p>
+                         </div>
+                     </div>
+                 </div>
+                 </div>
+                 <div class="paragraph">
+                     <h1>Starwars character search site</h1>
+                     <p>Starwars site gives the information of the characters</p>
+                     <p >It gives name and date of birth of particular character</p> 
+                     <!-- <p>User can watch the full article of national as well as international news.</p> -->
+                     <div>
+                         <a href="" target="_blank">
+                             <img src="./Resource/link.png" alt="">
+                             <h1>Live</h1>
+                         </a>
+                         <a href="https://github.com/Swapnil28Y" target="_blank">
+                             <img src="./Resource/github1.png" alt="">
+                             <h1>View Code</h1>
+                         </a>
+                     </div>
+                     
+                 </div>
+            </div>
+ 
+         </div> 
+
     </div>
    </section>
    <section class="contact" id="contact">
