--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        
     </div>
     <div class="homeimage">
-        <img src="./Resource/java developer.jpg" alt="">
+        <img src="./Resource/Background.webp" alt="">
     </div>
    </section>
    <!-- about section -->
@@ -161,59 +161,6 @@
             <img src="https://github-readme-stats.vercel.app/api?username=Swapnil28Y&show_icons=true&locale=en&theme=dark"/>
             <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Swapnil28Y&theme=radical&langs_count=8" alt="Swapnil28Y"  />
         </div>
-    <!-- <div class="statistic" id="statistic">
-        <h1>Works<span> I have done</span></h1>
-        <div id="datawork">
-            <div class="circle1">
-                <div class="outer">
-                    <div class="inner">
-                        <div class="number">
-                            1200+
-                        </div>
-
-                    </div>
-                </div>
-                <h3>
-                    Hours
-                </h3>
-                <p>
-                    of Full Stack Coding
-                </p>
-            </div>
-            <div class="circle1">
-                <div class="outer">
-                    <div class="inner">
-                        <div class="number">
-                            170+
-                        </div>
-
-                    </div>
-                </div>
-                <h3>
-                    Git
-                </h3>
-                <p>
-                   Commits
-                </p>
-            </div>
-            <div class="circle1">
-                <div class="outer">
-                    <div class="inner">
-                        <div class="number">
-                            5+
-                        </div>
-
-                    </div>
-                </div>
-                <h3>
-                    Projects
-                </h3>
-                <p>
-                    Done
-                </p>
-            </div>
-        </div>
-    </div> -->
    </section>
    <section class="project" id="project">
     <div class="max-width">
