--- a/index.html
+++ b/index.html
@@ -165,6 +165,111 @@
    <section class="project" id="project">
     <div class="max-width">
         <h2 class="title">Projects</h2>
+
+        <div id="projects-j1">
+            <div class="project-s">
+                 <div class="image">
+                     <img src="./Resource/Hoodie.png" alt="">
+                     <h3>Tech Stack</h3>
+                     <div>
+                         <div class="tools-s">
+                             <div>
+                                 <img src="./Resource/hibernate.jpg" alt="">
+                                 <p>Hibernate</p>
+                             </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/mysql.png" alt="">
+                             <p>MySql</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/java.png" alt="">
+                             <p>Java</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/github.png" alt="">
+                             <p>GitHub</p>
+                         </div>
+                     </div>
+                 </div>
+                 </div>
+                 <div class="paragraph">
+                     <h1>Online food delivey app</h1>
+                     <p>HoodieFoodie is an online food delivery website</p>
+                     <p >A user can make their own account, LogIn, order the food.</p> 
+                     <p>A user can purchase food, can make payment online.</p>
+                     <div>
+                         <a href="--" target="_blank">
+                             <img src="./Resource/link.png" alt="">
+                             <h1>Live</h1>
+                         </a>
+                         <a href="https://github.com/sgrprmnk/befitting-advice-51" target="_blank">
+                             <img src="./Resource/github1.png" alt="">
+                             <h1>View Code</h1>
+                         </a>
+                     </div>
+                     
+                 </div>
+            </div>
+ 
+         </div>
+         <div id="projects-j2">
+            <div class="project-s">
+                 <div class="image">
+                     <img src="./Resource/e-paY.png" alt="">
+                     <h3>Tech Stack</h3>
+                     <div>
+                         <div class="tools-s">
+                             <div>
+                                 <img src="./Resource/hibernate.jpg" alt="">
+                                 <p>Hibernate</p>
+                             </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/mysql.png" alt="">
+                             <p>MySql</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/java.png" alt="">
+                             <p>Java</p>
+                         </div>
+                     </div>
+                     <div class="tools-s">
+                         <div>
+                             <img src="./Resource/github.png" alt="">
+                             <p>GitHub</p>
+                         </div>
+                     </div>
+                 </div>
+                 </div>
+                 <div class="paragraph">
+                     <h1>Online banking system</h1>
+                     <p>e-paY is an online payment system</p>
+                     <p >User can create account, login and can make payment through the site.</p> 
+                     <p>Here Account balance can be verified and credit, debit is possible single handedly.</p>
+                     <div>
+                         <a href="https://drive.google.com/file/d/128iAlcynhN4kwOoWYbX80Olk_aflfxOt/view?usp=sharing" target="_blank">
+                             <img src="./Resource/link.png" alt="">
+                             <h1>Live</h1>
+                         </a>
+                         <a href="https://github.com/Swapnil28Y/tested-plant-5539" target="_blank">
+                             <img src="./Resource/github1.png" alt="">
+                             <h1>View Code</h1>
+                         </a>
+                     </div>
+                     
+                 </div>
+            </div>
+ 
+         </div>
         <div id="projects-1">
            <div class="project-s">
                 <div class="image">
