--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <p >A user can make their own account, LogIn, can order fruits and vegetables.</p> 
                     <p>User can select the required fruit and vegetables with given price.</p>
                      <div>
-                         <a href="https://boisterous-hotteok-75bc34.netlify.app/" target="_blank">
+                         <a href="https://kimaye0clone.netlify.app/" target="_blank">
                              <img src="./Resource/link.png" alt="">
                              <h1>Live</h1>
                          </a>
@@ -499,6 +499,8 @@
                 </div>
                 <div class="links">
                     <h3>"Hi 👋" in any case feel free to Let me know. I will do my best to respond back. 😊The quickest way to reach out to me is via an email.</h3>
+                    <h3 id="contactinfo">Contact No: 8788608505</h3>
+                    <br>
                     <!-- <a href="mailto:swapnildyeutkar@gmail.com" target="_blank"> &#x2022; Email</a> -->
                     <a href="mailto:swapnildyeutkar@gmail.com" target="_blank"><img src="./Resource/email.png" alt=""></a>
                     <a href="https://github.com/Swapnil28Y" target="_blank"><img src="./Resource/github.png" alt=""></a>
