--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                  </div>
                  </div>
                  <div class="paragraph">
-                     <h1>Online food delivey app</h1>
+                     <h1>Online food delivery app</h1>
                      <p>HoodieFoodie is an online food delivery website</p>
                      <p >A user can make their own account, LogIn, order the food.</p> 
                      <p>A user can purchase food, can make payment online.</p>
