--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div id="projects-j1">
             <div class="project-s">
                  <div class="image">
-                     <img src="./Resource/Hoodie.png" alt="">
+                     <img class="changingsize" src="./Resource/Hoodie.png" alt="">
                      <h3>Tech Stack</h3>
                      <div>
                          <div class="tools-s">
@@ -204,7 +204,7 @@
                      <p >A user can make their own account, LogIn, order the food.</p> 
                      <p>A user can purchase food, can make payment online.</p>
                      <div>
-                         <a href="--" target="_blank">
+                         <a href="https://drive.google.com/file/d/1r1tpDKwPu3iOf0xc5OfeZJbt2zoSzlDr/view?usp=sharing" target="_blank">
                              <img src="./Resource/link.png" alt="">
                              <h1>Live</h1>
                          </a>
@@ -221,7 +221,7 @@
          <div id="projects-j2">
             <div class="project-s">
                  <div class="image">
-                     <img src="./Resource/e-paY.png" alt="">
+                     <img class="changingsize" src="./Resource/e-paY.png" alt="">
                      <h3>Tech Stack</h3>
                      <div>
                          <div class="tools-s">
@@ -427,7 +427,7 @@
  
          </div>  
 
-         <div id="projects-4">
+         <!-- <div id="projects-4">
             <div class="project-s">
                  <div class="image">
                      <img src="./Resource/starwars.png" alt="">
@@ -463,7 +463,6 @@
                      <h1>Starwars character search site</h1>
                      <p>Starwars site gives the information of the characters</p>
                      <p >It gives name and date of birth of particular character</p> 
-                     <!-- <p>User can watch the full article of national as well as international news.</p> -->
                      <div>
                          <a href="" target="_blank">
                              <img src="./Resource/link.png" alt="">
@@ -480,7 +479,7 @@
  
          </div> 
 
-    </div>
+    </div> -->
    </section>
    <section class="contact" id="contact">
     <div class="max-width">
